Fixed logo alignment to page template icons

--- a/css/editor.css
+++ b/css/editor.css
@@ -20,7 +20,7 @@ div#top-bar-logo {
 	width: 39px;
 	height: 39px;
 	position: absolute;
-	left: 32px;
+	left: 29px;
 	background-image: url('../Assets/Sprites/Weebly-Logo.png');
 	background-size: 100% 100%;
 }
